fix: align of footer elements according pixel-perfect

--- a/pages/donate/style.scss
+++ b/pages/donate/style.scss
@@ -239,6 +239,7 @@ body {
 	background-color: $black;
 	padding-top: 40px;
 	padding-bottom: 40px;
+
 }
 
 .footer-wrapper {
@@ -249,6 +250,10 @@ body {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+}
+
+.footer__logo {
+	margin-bottom: 15px;
 }
 
 .subscribe__title {
